tests/src/frontend/typechecking/invalid/method_as_lambda_3.sk
mutable class Foo(mutable x: Int) {
  readonly fun foo(): Int {
    this.x
  }
}

fun tester(x: readonly Foo): void {
  _: () ~> Int = x.foo
}
